--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,14 @@
 <div id="contact-content">
     <h1>Contact Us</h1>
     <div class="description">
-        <p> Elbert Dang:  </p>
+        <p> Elbert Dang:  <a href="http://thecity.sfsu.edu/~edang/">http://thecity.sfsu.edu/~edang/</a></p>
+        <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            <a href="https://github.com/NetNGames">GitHub</a>
+        </p>
+        <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            <a href="https://www.linkedin.com/pub/elbert-dang/91/34b/873">LinkedIn</a>
+        </p>
+        
         <p> Jacob Gronert: <a href="http://www.jacobgronert.com">jacobgronert.com</a></p>
         <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
             <a href="https://github.com/Mirix5">GitHub</a>
