Added PVE on GitHub link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
+<!-- Site created for the Processing Video Editor
+        by Elbert Dang and Jacob Gronert
+        Fall 2014 Semester at SFSU
+
+        http://mirix5.github.io/processingvideoeditor/
 -->
 <!DOCTYPE html>
 <html>
