--- a/info.html
+++ b/info.html
@@ -20,7 +20,7 @@
     </div>
     <div class="info-links">
         <p><a href="ProjectReport.pdf">Full Project Report</a></p>
-        <p>PVE on GitHub</p>
+        <p><a href="https://github.com/NetNGames/Processing-Video-Editor/">PVE on GitHub</a></p>
         <p><a href="https://processing.org/">Processing</a></p>
     </div>
 </div>
