--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <div id="contact-content">
     <h1>Contact Us</h1>
     <div class="description">
-        <p> Elbert Dang:&nbsp&nbsp&nbsp<a href="http://thecity.sfsu.edu/~edang/">http://thecity.sfsu.edu/~edang/</a></p>
+        <p> Elbert Dang:&nbsp&nbsp&nbsp&nbsp<a href="http://thecity.sfsu.edu/~edang/">http://thecity.sfsu.edu/~edang/</a></p>
         <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
             <a href="https://github.com/NetNGames">GitHub</a>
         </p>
