Renamed project report

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         
         <!-- Stylesheets -->
         <link rel="stylesheet" type="text/css" href="css/custom.css">
+        <link rel="stylesheet" type="text/css" href="css/screenshots.css">
         <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
         
         <!-- jQuery and Javascript-->
