--- a/screenshots.html
+++ b/screenshots.html
@@ -4,5 +4,21 @@
         <video id ="PVEmovie" autoplay loop>
             <source src="images/PVE.webm" type="video/mp4">
         </video>
+
+        <div class="thumbnails">
+            <h2> Screenshots </h2>
+            <div class="thumbnail">
+                <img src="images/audio.png" />
+            </div>
+            <div class="thumbnail">
+                <img src="images/audio.png" />
+            </div>
+            <div class="thumbnail">
+                <img src="images/audio.png" />
+            </div>
+            <div class="thumbnail">
+                <img src="images/audio.png" />
+            </div>
+        </div>
     </div>
 </div>
