--- a/screenshots.html
+++ b/screenshots.html
@@ -8,16 +8,16 @@
         <div class="thumbnails">
             <h2> Screenshots </h2>
             <div class="thumbnail">
-                <img src="images/audio.png" />
+                <img src="images/default.png" />
             </div>
             <div class="thumbnail">
-                <img src="images/audio.png" />
+                <img src="images/AudOnly.png" />
             </div>
             <div class="thumbnail">
-                <img src="images/audio.png" />
+                <img src="images/VidEffects.png" />
             </div>
             <div class="thumbnail">
-                <img src="images/audio.png" />
+                <img src="images/fullscreen.png" />
             </div>
         </div>
     </div>
