--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,20 @@
 <div id="contact-content">
     <h1>Contact Us</h1>
     <div class="description">
-        <p> Elbert Dang:&nbsp&nbsp&nbsp&nbsp<a href="http://thecity.sfsu.edu/~edang/">http://thecity.sfsu.edu/~edang/</a></p>
+        <p> Elbert Dang:&nbsp&nbsp&nbsp&nbsp<a target="_blank" href="http://thecity.sfsu.edu/~edang/">http://thecity.sfsu.edu/~edang/</a></p>
         <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-            <a href="https://github.com/NetNGames">GitHub</a>
+            <a target="_blank" href="https://github.com/NetNGames">GitHub</a>
         </p>
         <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-            <a href="https://www.linkedin.com/pub/elbert-dang/91/34b/873">LinkedIn</a>
+            <a target="_blank" href="https://www.linkedin.com/pub/elbert-dang/91/34b/873">LinkedIn</a>
         </p>
         
-        <p> Jacob Gronert: <a href="http://www.jacobgronert.com">jacobgronert.com</a></p>
+        <p> Jacob Gronert: <a target="_blank" href="http://www.jacobgronert.com">jacobgronert.com</a></p>
         <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-            <a href="https://github.com/Mirix5">GitHub</a>
+            <a target="_blank" href="https://github.com/Mirix5">GitHub</a>
         </p>
         <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-            <a href="https://www.linkedin.com/pub/jacob-gronert/91/249/829">LinkedIn</a>
+            <a target="_blank" href="https://www.linkedin.com/pub/jacob-gronert/91/249/829">LinkedIn</a>
         </p>
     </div>
 </div>
