--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Video Editor</title>
+        <title>Processing Video Editor</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <!-- Stylesheets -->
