--- a/info.html
+++ b/info.html
@@ -19,8 +19,8 @@
         </div>
     </div>
     <div class="info-links">
-        <p><a href="ProjectReport.pdf">Full Project Report</a></p>
-        <p><a href="https://github.com/NetNGames/Processing-Video-Editor">PVE on GitHub</a></p>
-        <p><a href="https://processing.org/">Processing</a></p>
+        <p><a target="_blank" href="ProjectReport.pdf">Full Project Report</a></p>
+        <p><a target="_blank" href="https://github.com/NetNGames/Processing-Video-Editor">PVE on GitHub</a></p>
+        <p><a target="_blank" href="https://processing.org/">Processing</a></p>
     </div>
 </div>
